--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
 <body>
   <p>&amp; Hello world. This is my first website!</p>
   <p>Instructions: rewrite this page by adding a few sentences about yourself. Follow the instructions in README.md to turn it in.</p>
+  <p>My name is Dewan Singh and I am excited to learn about Web Development for the first time!<p>
+  <p>Right now I work as an Information Systems Security Officer and I am continuing my education to better myself professionally and set myself up to future opportunities.<p>
+  <p>Some of my hobbies include playing roguelike video games and running on the beach. I don't run on the beach now because it's too cold for that!<p>
 </body>
 </html>
